HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DynamicSelfParameterNonDispatchable/Expected.uv
//! Expected diagnostic metadata for the DynamicSelfParameterNonDispatchable rejected-source specimen.

expectedDiagnostic("E-TYP-2541", "rule.14.Dynamic-NonDispatchable")
